--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       
         <nav class="nav-tabs">
           <a href="#" class="tab-active">투자 공유</a>
-          <a href="./chatting_page.html" class="tab-inactive">채팅방</a>
+          <a href="chatting_page.html" class="tab-inactive">채팅방</a>
         </nav>
       
         <form class="search-bar" role="search">
