--- a/chatting_page.html
+++ b/chatting_page.html
@@ -201,7 +201,7 @@
             </header>
           
             <nav class="nav-tabs">
-                <a href="C:\Users\campus3S036\Desktop\test\item_sharing_page.html" class="tab-inactive">투자 공유</a>
+                <a href="index.html">투자 공유</a>
                 <a href="#" class="tab-active">채팅방</a>
             </nav>
 
