--- a/chatting_page.html
+++ b/chatting_page.html
@@ -201,7 +201,7 @@
             </header>
           
             <nav class="nav-tabs">
-                <a href="index.html">투자 공유</a>
+                <a href="https://jiwonchoe12.github.io/">투자 공유</a>
                 <a href="#" class="tab-active">채팅방</a>
             </nav>
 
